bluec-tests/tests/invalid/types_bool/incompatible_pointer_type2.c
int main(void) {
    _Bool (*ptr)[5] = &"test";
    return 0;
}